[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wikes_toolkit"
version = "1.0.8"
description = "Toolkit for Wiki-Entity-Summarization datasets (WikES) that helps end-users work with WikES datasets."
readme = "README.md"
authors = [{ name = "Mo Sorkhpar", email = "msorkhpar@outlook.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "networkx >= 3.3",
    "requests >= 2.26.0",
    "tqdm >= 4.62.3",
    "pandas >= 2.2.2",
    "numpy >= 1.26.4",
]
requires-python = ">=3.10"


[project.urls]
Homepage = "https://github.com/msorkhpar/wiki-entity-summarization-toolkit"